--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Book Project</title>
+  <link rel="icon" href="book-it-1.svg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -17,24 +18,39 @@
 <body>
 
   <div class="mainConatainer">
-    <h1>Kitob Javoni</h1>
+    <h1>Add Book</h1>
     <form class="form" id="form">
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">KitobNomi</label>
-        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <div>
+        <label class="form-label">Title</label>
+        <input type="text" class="control" id="title" autocomplete="off">
       </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Yozuvchi</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
+      <div>
+        <label class="for-label">Author</label>
+        <input type="text" class="control" id="author" autocomplete="off">
       </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Sana</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
+      <div>
+        <label class="form-label">Isbn</label>
+        <input type="text" class="control" id="isbn" autocomplete="off">
       </div>
-      <button type="submit" class="btn btn-outline-primary">Add</button>
+      <button class="btn btn-outline-primary">Add</button>
     </form>
+
+    <table class="table">
+      <thead>
+        <tr>
+          <th class="col">Title</th>
+          <th class="col">Author</th>
+          <th class="col">Isbn</th>
+          <th class="col"></th>
+        </tr>
+      </thead>
+      <tbody class="kitob-royxati"></tbody>
+    </table>
   </div>
 
+
+  <!-- js -->
+  <script src="app.js"></script>
 </body>
 
 </html>
